--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer efficitur erat felis, ultrices facilisis velit laoreet a. Praesent placerat efficitur.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
